:bug: Sidebar z-index

--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -6,7 +6,7 @@
 	height: 100%;
 	position: absolute;
 	top: 0;
-	z-index: 3;
+	z-index: 4;
 	background-color: $blanc;
 	filter: drop-shadow(0px 24px 35px rgba(0, 0, 0, 0.15));
 	transition: transform 0.3s ease-in-out;
